--- a/index.html
+++ b/index.html
@@ -1208,8 +1208,16 @@
   <!--
     - ionicon link
   -->
-  <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
-  <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+<!-- 🌍 ClustrMaps visitor counter -->
+<script id="clustrmaps"
+        src="https://clustrmaps.com/map_v2.js?d=_I13tFIv-e1mmmJvh9b-ocIlxZADM5Adhi6YKup_nj4&cl=ffffff&w=a">
+</script>
+
+<script src="./assets/js/script.js"></script>
+<script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+<script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+
+
 
 </body>
 
