--- a/index.html
+++ b/index.html
@@ -1209,9 +1209,12 @@
     - ionicon link
   -->
 <!-- 🌍 ClustrMaps visitor counter -->
-<script id="clustrmaps"
-        src="https://clustrmaps.com/map_v2.js?d=_I13tFIv-e1mmmJvh9b-ocIlxZADM5Adhi6YKup_nj4&cl=ffffff&w=a">
-</script>
+
+<div id="map-wrap" style="max-width:550px; margin:40px auto; overflow:hidden;">
+  <script id="clustrmaps"
+          src="https://clustrmaps.com/map_v2.js?d=_I13tFIv-e1mmmJvh9b-ocIlxZADM5Adhi6YKup_nj4&cl=ffffff&w=a">
+  </script>
+</div>
 
 <script src="./assets/js/script.js"></script>
 <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
