--- a/index.html
+++ b/index.html
@@ -1210,14 +1210,14 @@
   -->
 <!-- 🌍 ClustrMaps visitor counter -->
 
-<footer>
+<!-- <footer>
   <div style="max-width:550px; margin:40px auto 60px; text-align:center;">
     <a href="https://clustrmaps.com/site/1c6hm" title="Visitor map">
       <img src="https://www.clustrmaps.com/map_v2.png?d=_I13tFIv-e1mmmJvh9b-ocIlxZADM5Adhi6YKup_nj4&t=n&cl=ffffff"
            alt="visitor map" style="width:100%; height:auto;">
     </a>
   </div>
-</footer>
+</footer> -->
 
 
 <script src="./assets/js/script.js"></script>
