--- a/index.html
+++ b/index.html
@@ -793,17 +793,19 @@
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">Lecturer</h4>
+              <h4 class="h4 timeline-item-title">Lecturer (Full-time) [2025–Present]</h4>
               <a class="h4 timeline-item-title"
                 href="https://www.bracu.ac.bd/academics/departments/computer-science-and-engineering"
                 target="_blank">
-                Department of Computer Science &amp; Engineering, BRAC University
+                Department of Computer Science &amp; Engineering (CSE),<br>
+                School of Data and Sciences (SDS),<br>
+                BRAC University, Dhaka, Bangladesh
               </a>
-              <span>June&nbsp;2025 – Present</span>
+              
 
               <p class="timeline-text">
                 <ul>
-                  <li class="timeline-text">Course assignments to be announced (joined 1&nbsp;June&nbsp;2025).</li>
+                  <li class="timeline-text">Courses Teaching: CSE 420 Compiler Design and CSE 421 Computer Networks (theory + lab, Summer 2025).</li>
                 </ul>
               </p>
 
