--- a/index.html
+++ b/index.html
@@ -793,13 +793,14 @@
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">Lecturer (Full-time) [2025–Present]</h4>
+              <h4 class="h4 timeline-item-title">Lecturer (Full-time) <span>[2025–Present]</span></h4>
               <a class="h4 timeline-item-title"
                 href="https://www.bracu.ac.bd/academics/departments/computer-science-and-engineering"
                 target="_blank">
                 Department of Computer Science &amp; Engineering (CSE),<br>
                 School of Data and Sciences (SDS),<br>
-                BRAC University, Dhaka, Bangladesh
+                BRAC University, <br>
+		Dhaka, Bangladesh
               </a>
               
 
