--- a/index.html
+++ b/index.html
@@ -793,7 +793,9 @@
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">Lecturer (Full-time) <span>[2025–Present]</span></h4>
+		<h4 class="h4 timeline-item-title" style="white-space: nowrap;">
+		  Lecturer (Full-time) <span>[2025–Present]</span>
+		</h4>
               <a class="h4 timeline-item-title"
                 href="https://www.bracu.ac.bd/academics/departments/computer-science-and-engineering"
                 target="_blank">
@@ -806,7 +808,8 @@
 
               <p class="timeline-text">
                 <ul>
-                  <li class="timeline-text">Courses Teaching: CSE 420 Compiler Design and CSE 421 Computer Networks (theory + lab, Summer 2025).</li>
+                  <li class="timeline-text"><b>Courses Teaching:</b> CSE 420 Compiler Design and CSE 421 Computer Networks (theory + lab, Summer 2025).</li>
+
                 </ul>
               </p>
 
