--- a/index.html
+++ b/index.html
@@ -793,9 +793,7 @@
 
             <li class="timeline-item">
 
-		<h4 class="h4 timeline-item-title" style="white-space: nowrap;">
-		  Lecturer (Full-time) <span>[2025–Present]</span>
-		</h4>
+	      <h4 class="h4 timeline-item-title">Lecturer (Full-time) <span>[2025–Present]</span></h4>
               <a class="h4 timeline-item-title"
                 href="https://www.bracu.ac.bd/academics/departments/computer-science-and-engineering"
                 target="_blank">
