--- a/index.html
+++ b/index.html
@@ -804,7 +804,7 @@
 		  </a>
 		
 		  <ul>
-		    <li class="timeline-text"><b>Courses Teaching:</b> CSE 420 Compiler Design and CSE 421 Computer Networks (theory + lab, Summer 2025).</li>
+		    <li class="timeline-text"><strong>Courses Teaching:</strong> CSE 420 Compiler Design and CSE 421 Computer Networks (theory + lab, Summer 2025).</li>
 		  </ul>
 		
 		</li>
