--- a/index.html
+++ b/index.html
@@ -547,12 +547,11 @@
                 <p class="blog-category">Network&nbsp;Analysis</p>
               </div>
 
-              <p class="timeline-text">
-                I worked under the supervision of <a href="https://sites.google.com/site/abmalimalislam/home" target="_blank" style="display:inline;">Dr. A. B. M. Alim Al Islam</a> on a cross-dataset mental health research project involving three distinct populations: medical students, quarantined individuals, and patients with psychiatric disorders. 
-                Our goal was to uncover demographic and symptomatic trends using statistical modeling, network analysis, and machine learning. We performed causal inference using propensity score matching, identified variable interdependencies via clique-based network modeling, and incorporated intersectional effects with Bayesian and Random Forest models.
-                Our study was accepted for publication in <b>Nature Humanities and Social Sciences Communications</b>; final version currently in production.  
-                Preprint available on Research Square: <a href="https://www.researchsquare.com/article/rs-5208909/v2" target="_blank" style="display:inline;">link</a>.
-              </p>
+		 <p class="timeline-text">
+		  I worked under the supervision of <a href="https://sites.google.com/site/abmalimalislam/home" target="_blank" style="display:inline;">Dr. A. B. M. Alim Al Islam</a> on a cross-dataset mental health research project involving three distinct populations: medical students, quarantined individuals, and patients with psychiatric disorders. 
+		  Our goal was to uncover demographic and symptomatic trends using statistical modeling, network analysis, and machine learning. We performed causal inference using propensity score matching, identified variable interdependencies via clique-based network modeling, and incorporated intersectional effects with Bayesian and Random Forest models.
+		  Our study was published in <b><a href="https://www.nature.com/articles/s41599-025-05053-x" target="_blank" style="display:inline;">Nature Humanities and Social Sciences Communications</a></b>.
+		</p>
 
             </li>
 
