--- a/index.html
+++ b/index.html
@@ -667,11 +667,13 @@
 
   <ol class="timeline-list">
     <li class="timeline-item">
-      <p class="timeline-text">
-        Abdullah Nayem Wasi Emran, A. B. M. Alim Al Islam, 
-        “Mental Health Across Contexts: A Cross-Dataset Study Covering Medical Students, Quarantined Individuals, and Psychiatric-Disordered Subjects,” 
-        <em>Nature Humanities and Social Sciences Communications</em>, 2025
-      </p>
+	<p class="timeline-text">
+	  Abdullah Nayem Wasi Emran, A. B. M. Alim Al Islam, 
+	  “Mental Health Across Contexts: A Cross-Dataset Study Covering Medical Students, Quarantined Individuals, and Psychiatric-Disordered Subjects,” 
+	  <a href="https://www.nature.com/articles/s41599-025-05053-x" target="_blank" style="color:#3daee9; text-decoration:none;">
+	    <em>Nature Humanities and Social Sciences Communications</em>
+	  </a>, 2025
+	</p>
     </li>
   </ol>
 </section>
