--- a/index.html
+++ b/index.html
@@ -671,8 +671,8 @@
 	  Abdullah Nayem Wasi Emran, A. B. M. Alim Al Islam, 
 	  “Mental Health Across Contexts: A Cross-Dataset Study Covering Medical Students, Quarantined Individuals, and Psychiatric-Disordered Subjects,” 
 	  <a href="https://www.nature.com/articles/s41599-025-05053-x" target="_blank" style="color:#3daee9; text-decoration:none;">
-	    <em>Nature Humanities and Social Sciences Communications</em>
-	  </a>, 2025
+	    <em>Nature Humanities and Social Sciences Communications</em>, 2025
+	  </a>
 	</p>
     </li>
   </ol>
