--- a/index.html
+++ b/index.html
@@ -508,6 +508,48 @@
 
           <ol class="timeline-list">
 
+			<li class="timeline-item">
+			  <h4 class="h4 timeline-item-title">
+			    Domain-Adaptive Causal Uplift Modeling across Heterogeneous Mental-Health Cohorts
+			  </h4>
+			  <span>Apr&nbsp;2025 – Present</span>
+			  <div class="blog-meta">
+			    <p class="blog-category">Causal&nbsp;Inference</p><span class="dot"></span>
+			    <p class="blog-category">Domain&nbsp;Adaptation</p><span class="dot"></span>
+			    <p class="blog-category">Fair&nbsp;ML</p>
+			  </div>
+			  <p class="timeline-text">
+			    I am working with 
+			    <a href="https://sites.google.com/site/abmalimalislam/home" target="_blank" style="display:inline;">Dr.&nbsp;A.&nbsp;B.&nbsp;M.&nbsp;Alim&nbsp;Al&nbsp;Islam</a> 
+			    on developing a domain-adaptive causal uplift model for mental-health prediction across medical students, quarantined individuals, and clinically diagnosed psychiatric patients. 
+			    My work involves building a unified preprocessing pipeline for harmonizing heterogeneous datasets, implementing a Domain-Adversarial Neural Network (DANN) with gradient reversal and multi-head outputs in PyTorch Lightning, and incorporating fairness-aware regularization to reduce disparities across gender and education groups. 
+			    The current focus is on improving out-of-domain generalization using leave-one-cohort-out evaluation and AUUC as the primary metric, while exploring calibration techniques that account for inverted treatment effects in certain cohorts. 
+			    This research aims to provide a fair and generalizable framework for treatment-effect estimation in behavioral health.
+			  </p>
+			</li>
+
+			<li class="timeline-item">
+				  <h4 class="h4 timeline-item-title">
+				    Exploring RNA–Protein Interaction Prediction with Limited Computational Resources
+				  </h4>
+				  <span>May&nbsp;2025 – Present</span>
+				  <div class="blog-meta">
+				    <p class="blog-category">Bioinformatics</p><span class="dot"></span>
+				    <p class="blog-category">Computational&nbsp;Biology</p><span class="dot"></span>
+				    <p class="blog-category">Deep&nbsp;Learning</p>
+				  </div>
+				  <p class="timeline-text">
+				    I am conducting an ongoing research project under 
+				    <a href="https://cse.buet.ac.bd/faculty/faculty_detail/mrahman" target="_blank" style="display:inline;">Dr.&nbsp;Mohammad &nbsp;Saifr&nbsp;Rahman</a>, 
+				    focused on predicting RNA–protein interactions with resource-efficient deep learning methods. 
+				    The project involves curating datasets from sources such as UniProt, EuRBPDB and developing preprocessing pipelines that integrate sequence and structural features. 
+				    I am currently exploring the use of pre-trained protein language models (e.g., ESM2, ProtBERT) and lightweight self-supervised approaches, alongside potential graph-based methods, to design an embedding framework suitable for constrained GPU availability. 
+				    The work is still in the dataset curation and model prototyping phase, but the long-term objective is to establish a scalable predictive framework for RNA–protein binding that can contribute to understanding post-transcriptional regulation and therapeutic target discovery.
+				  </p>
+				</li>
+
+			  
+
                         <!-- 1 ▸ Undergraduate Thesis -->
             <li class="timeline-item">
 
@@ -540,7 +582,7 @@
                 Mental&nbsp;Health Across Contexts: A Cross-Dataset Study Covering Medical Students, Quarantined Individuals, and Psychiatric-Disordered Subjects
               </h4>
 
-              <span>Jul&nbsp;2024 – May&nbsp;2025</span>
+              <span>Jul&nbsp;2024 – Jan&nbsp;2025</span>
               <div class="blog-meta">
                 <p class="blog-category">Data&nbsp;Mining</p><span class="dot"></span>
                 <p class="blog-category">Mental&nbsp;Health</p><span class="dot"></span>
