--- a/index.html
+++ b/index.html
@@ -508,26 +508,10 @@
 
           <ol class="timeline-list">
 
-			<li class="timeline-item">
-			  <h4 class="h4 timeline-item-title">
-			    Domain-Adaptive Causal Uplift Modeling across Heterogeneous Mental-Health Cohorts
-			  </h4>
-			  <span>Apr&nbsp;2025 – Present</span>
-			  <div class="blog-meta">
-			    <p class="blog-category">Causal&nbsp;Inference</p><span class="dot"></span>
-			    <p class="blog-category">Domain&nbsp;Adaptation</p><span class="dot"></span>
-			    <p class="blog-category">Fair&nbsp;ML</p>
-			  </div>
-			  <p class="timeline-text">
-			    I am working with 
-			    <a href="https://sites.google.com/site/abmalimalislam/home" target="_blank" style="display:inline;">Dr.&nbsp;A.&nbsp;B.&nbsp;M.&nbsp;Alim&nbsp;Al&nbsp;Islam</a> 
-			    on developing a domain-adaptive causal uplift model for mental-health prediction across medical students, quarantined individuals, and clinically diagnosed psychiatric patients. 
-			    My work involves building a unified preprocessing pipeline for harmonizing heterogeneous datasets, implementing a Domain-Adversarial Neural Network (DANN) with gradient reversal and multi-head outputs in PyTorch Lightning, and incorporating fairness-aware regularization to reduce disparities across gender and education groups. 
-			    The current focus is on improving out-of-domain generalization using leave-one-cohort-out evaluation and AUUC as the primary metric, while exploring calibration techniques that account for inverted treatment effects in certain cohorts. 
-			    This research aims to provide a fair and generalizable framework for treatment-effect estimation in behavioral health.
-			  </p>
-			</li>
 
+             <!--  ▸ RNA-Protein Interaction -->
+
+			  
 			<li class="timeline-item">
 				  <h4 class="h4 timeline-item-title">
 				    Exploring RNA–Protein Interaction Prediction with Limited Computational Resources
@@ -540,7 +524,7 @@
 				  </div>
 				  <p class="timeline-text">
 				    I am conducting an ongoing research project under 
-				    <a href="https://cse.buet.ac.bd/faculty/faculty_detail/mrahman" target="_blank" style="display:inline;">Dr.&nbsp;Mohammad &nbsp;Saifr&nbsp;Rahman</a>, 
+				    <a href="https://cse.buet.ac.bd/faculty/faculty_detail/mrahman" target="_blank" style="display:inline;">Dr.&nbsp;Mohammad&nbsp;Saifur&nbsp;Rahman</a>, 
 				    focused on predicting RNA–protein interactions with resource-efficient deep learning methods. 
 				    The project involves curating datasets from sources such as UniProt, EuRBPDB and developing preprocessing pipelines that integrate sequence and structural features. 
 				    I am currently exploring the use of pre-trained protein language models (e.g., ESM2, ProtBERT) and lightweight self-supervised approaches, alongside potential graph-based methods, to design an embedding framework suitable for constrained GPU availability. 
@@ -548,9 +532,29 @@
 				  </p>
 				</li>
 
+			      <!--  ▸ DANN Study-->
 			  
+			  	<li class="timeline-item">
+				  <h4 class="h4 timeline-item-title">
+				    Domain-Adaptive Causal Uplift Modeling across Heterogeneous Mental-Health Cohorts
+				  </h4>
+				  <span>Apr&nbsp;2025 – Present</span>
+				  <div class="blog-meta">
+				    <p class="blog-category">Causal&nbsp;Inference</p><span class="dot"></span>
+				    <p class="blog-category">Domain&nbsp;Adaptation</p><span class="dot"></span>
+				    <p class="blog-category">Fair&nbsp;ML</p>
+				  </div>
+				  <p class="timeline-text">
+				    I am working with 
+				    <a href="https://sites.google.com/site/abmalimalislam/home" target="_blank" style="display:inline;">Dr.&nbsp;A.&nbsp;B.&nbsp;M.&nbsp;Alim&nbsp;Al&nbsp;Islam</a> 
+				    on developing a domain-adaptive causal uplift model for mental-health prediction across medical students, quarantined individuals, and clinically diagnosed psychiatric patients. 
+				    My work involves building a unified preprocessing pipeline for harmonizing heterogeneous datasets, implementing a Domain-Adversarial Neural Network (DANN) with gradient reversal and multi-head outputs in PyTorch Lightning, and incorporating fairness-aware regularization to reduce disparities across gender and education groups. 
+				    The current focus is on improving out-of-domain generalization using leave-one-cohort-out evaluation and AUUC as the primary metric, while exploring calibration techniques that account for inverted treatment effects in certain cohorts. 
+				    This research aims to provide a fair and generalizable framework for treatment-effect estimation in behavioral health.
+				  </p>
+			</li>
 
-                        <!-- 1 ▸ Undergraduate Thesis -->
+                        <!--  ▸ Undergraduate Thesis -->
             <li class="timeline-item">
 
               <h4 class="h4 timeline-item-title">
@@ -575,7 +579,7 @@
 
             </li>
 
-            <!-- 2 ▸ Mental-Health Cross-Dataset Study -->
+            <!-- ▸ Mental-Health Cross-Dataset Study -->
             <li class="timeline-item">
 
               <h4 class="h4 timeline-item-title">
@@ -597,7 +601,7 @@
 
             </li>
 
-            <!-- 3 ▸ IoT / LLM Security Project -->
+            <!--  ▸ IoT / LLM Security Project -->
             <li class="timeline-item">
 
               <h4 class="h4 timeline-item-title">
