--- a/index.html
+++ b/index.html
@@ -514,7 +514,7 @@
 			  
 			<li class="timeline-item">
 				  <h4 class="h4 timeline-item-title">
-				    Exploring RNA–Protein Interaction Prediction with Limited Computational Resources
+				    Efficient RNA–Protein Interaction Prediction with Foundation-Model Embeddings
 				  </h4>
 				  <span>May&nbsp;2025 – Present</span>
 				  <div class="blog-meta">
@@ -525,7 +525,7 @@
 				  <p class="timeline-text">
 				    I am conducting an ongoing research project under 
 				    <a href="https://cse.buet.ac.bd/faculty/faculty_detail/mrahman" target="_blank" style="display:inline;">Dr.&nbsp;Mohammad&nbsp;Saifur&nbsp;Rahman</a>, 
-				    focused on predicting RNA–protein interactions with resource-efficient deep learning methods. 
+				    on computational prediction of RNA–protein interactions. 
 				    The project involves curating datasets from sources such as UniProt, EuRBPDB and developing preprocessing pipelines that integrate sequence and structural features. 
 				    I am currently exploring the use of pre-trained protein language models (e.g., ESM2, ProtBERT) and lightweight self-supervised approaches, alongside potential graph-based methods, to design an embedding framework suitable for constrained GPU availability. 
 				    The work is still in the dataset curation and model prototyping phase, but the long-term objective is to establish a scalable predictive framework for RNA–protein binding that can contribute to understanding post-transcriptional regulation and therapeutic target discovery.
