--- a/index.html
+++ b/index.html
@@ -820,7 +820,7 @@
           <div class="title-wrapper">
             <h2 class="h2 article-title">Resume </h2>
             <div style="float: right; margin: 50px;">
-              <a href="assets/Emran_AbdullahNayemWasi_CV.pdf"> <ion-icon name="download-outline" style="font-size: 2rem;"></ion-icon></a>               
+              <a href="assets/AbdullahNayem_CV.pdf"> <ion-icon name="download-outline" style="font-size: 2rem;"></ion-icon></a>               
             </div>
           </div>
           
