--- a/index.html
+++ b/index.html
@@ -838,23 +838,29 @@
 
           <ol class="timeline-list">
 
-		<li class="timeline-item">
-		
-		  <h4 class="h4 timeline-item-title">Lecturer (Full-time) <span>[2025–Present]</span></h4>
-		  <a class="h4 timeline-item-title"
-		    href="https://www.bracu.ac.bd/academics/departments/computer-science-and-engineering"
-		    target="_blank">
-		    Department of Computer Science &amp; Engineering (CSE),<br>
-		    School of Data and Sciences (SDS),<br>
-		    BRAC University, <br>
-		    Dhaka, Bangladesh
-		  </a>
-		
-		  <ul>
-		    <li class="timeline-text"><strong>Courses Teaching:</strong> CSE 420 Compiler Design and CSE 421 Computer Networks (theory + lab, Summer 2025).</li>
-		  </ul>
-		
-		</li>
+			<li class="timeline-item">
+
+			  <!-- top row: title on left, dates on right -->
+			  <div class="rowline">
+			    <h4 class="h4 timeline-item-title">Lecturer (Full-time)</h4>
+			    <span class="when">2025–Present</span>
+			  </div>
+			
+			  <!-- org line (no extra heading styles, no <br> stacking) -->
+			  <p class="org">
+			    <a href="https://www.bracu.ac.bd/academics/departments/computer-science-and-engineering" target="_blank">
+			      Department of Computer Science &amp; Engineering (CSE), School of Data and Sciences (SDS), BRAC University, Dhaka, Bangladesh
+			    </a>
+			  </p>
+			
+			  <!-- clear, per-term teaching bullets -->
+			  <ul class="teaching-list">
+			    <li><span class="term">Summer 2025:</span> CSE 420 <em>Compiler Design</em>; CSE 421 <em>Computer Networks</em> (theory + lab)</li>
+			    <li><span class="term">Fall 2025:</span> CSE 421 <em>Computer Networks</em> (theory); CSE 230 <em>Discrete Mathematics</em> (theory)</li>
+			  </ul>
+			
+			</li>
+
 
 
           </ol>
