--- a/index.html
+++ b/index.html
@@ -712,6 +712,14 @@
   </div>
 
   <ol class="timeline-list">
+	<li class="timeline-item">
+	    <p class="timeline-text">
+	      <strong>Abdullah Nayem Wasi Emran</strong>, Tanveer Rahman,
+	      “SCOPES: Stability-Aware Cross-Platform Feature Selection for Matched TCGA Gene Expression and RNA-Seq Data,”
+	      <em>AI2ASE Workshop @ AAAI-26</em>, 2026 — Accepted (to appear).
+	    </p>
+	</li>
+	  
     <li class="timeline-item">
 	<p class="timeline-text">
 	  Abdullah Nayem Wasi Emran, A. B. M. Alim Al Islam, 
