--- a/index.html
+++ b/index.html
@@ -716,7 +716,7 @@
 	    <p class="timeline-text">
 	      <strong>Abdullah Nayem Wasi Emran</strong>, Tanveer Rahman,
 	      “SCOPES: Stability-Aware Cross-Platform Feature Selection for Matched TCGA Gene Expression and RNA-Seq Data,”
-	      <em>AI2ASE Workshop @ AAAI-26</em>, Accepted (to appear), 2026.
+    AAAI 2026 Workshop on AI to Accelerate Science and Engineering (AI2ASE), 2026 — Accepted (to appear).
 	    </p>
 	</li>
 	  
