--- a/index.html
+++ b/index.html
@@ -98,8 +98,10 @@
 
       <div>
 
-        <h4>Updates</h4> 
-        <li><i style="color: blue;">June '25, Appointed as a Full-Time Lecturer at Brac University</i></li>
+        <h4>Updates</h4>
+		<li><i style="color: blue;">Nov '25, <span title="SCOPES: Stability-Aware Cross-Platform Feature Selection for Matched TCGA Gene Expression and RNA-Seq Data">SCOPES</span> accepted at <b>AAAI-26 AI2ASE Workshop</b></i></li>
+		<div class="separator_sidebar"></div>  
+        <li><i>June '25, Appointed as a Full-Time Lecturer at Brac University</i></li>
         <div class="separator_sidebar"></div>
         <li><i>May '25, Our paper <span style="color: #2c3e50;">"Mental health across contexts: a cross-dataset study covering medical students, quarantined individuals, and psychiatric disordered subjects"</span> was accepted at <b>Nature Humanities and Social Sciences Communications</b></i></li>
         <div class="separator_sidebar"></div>
