--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
       <div>
 
         <h4>Updates</h4>
-		<li><i style="color: blue;">Nov '25, <span title="SCOPES: Stability-Aware Cross-Platform Feature Selection for Matched TCGA Gene Expression and RNA-Seq Data">SCOPES</span> accepted at <b>AAAI-26 AI2ASE Workshop</b></i></li>
+		<li><i style="color: blue;">Nov '25, My latest paper "SCOPES" got accepted at <b>AAAI-26 AI2ASE Workshop</b></i></li>
 		<div class="separator_sidebar"></div>  
         <li><i>June '25, Appointed as a Full-Time Lecturer at Brac University</i></li>
         <div class="separator_sidebar"></div>
