--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 		<div class="separator_sidebar"></div>  
         <li><i>June '25, Appointed as a Full-Time Lecturer at Brac University</i></li>
         <div class="separator_sidebar"></div>
-        <li><i>May '25, Our paper <span style="color: #2c3e50;">"Mental health across contexts: a cross-dataset study covering medical students, quarantined individuals, and psychiatric disordered subjects"</span> was accepted at <b>Nature Humanities and Social Sciences Communications</b></i></li>
+        <li><i>May '25, Our paper "Mental health across contexts: a cross-dataset study covering medical students, quarantined individuals, and psychiatric disordered subjects" was accepted at <b>Nature Humanities and Social Sciences Communications</b></i></li>
         <div class="separator_sidebar"></div>
         <li><i>March '25, Graduated from BUET</i></li>
         <div class="separator_sidebar"></div>
@@ -184,15 +184,24 @@
         </header>
 
       <section class="about-text">
-        <p>
-          I'm Abdullah Nayem Wasi Emran, currently working as a Lecturer at the Department of Computer Science and Engineering</a> of <a href="https://www.bracu.ac.bd/" style="display: inline;">Brac University</a>. I have completed my Bachelor's degree in Computer Science and Engineering from <a href="https://www.buet.ac.bd/web/#/" style="display: inline;">Bangladesh University of Engineering and Technology (BUET)</a>. My primary research interests include <b>Machine Learning</b>, <b>Bioinformatics</b>, <b>Optimization</b>, and <b>Algorithms</b>. I am passionate about applying computational techniques to solve high-impact problems in healthcare and biological systems.
-          <br><br>
+		<p>
+		  I'm Abdullah Nayem Wasi Emran, currently working as a Lecturer at the Department of Computer Science and Engineering</a> of 
+		  <a href="https://www.bracu.ac.bd/" style="display: inline;">Brac University</a>. I have completed my Bachelor's degree in Computer Science and Engineering from 
+		  <a href="https://www.buet.ac.bd/web/#/" style="display: inline;">Bangladesh University of Engineering and Technology (BUET)</a>. 
+		  My research sits at the intersection of <b>AI/ML for Healthcare</b> and <b>Bioinformatics</b>, with a focus on methods that remain reliable across shifts in data and population—particularly in low-resource settings.
+		  <br><br>
+		
+		  Recently, I led a cross-dataset study on mental health across diverse cohorts, published in 
+		  <i>Humanities & Social Sciences Communications</i> (Nature Portfolio, 2025). On the bioinformatics side, our 
+		  <b>SCOPES</b> work, accepted to the AAAI-26 
+		  <a href="https://aaai.org/aaai-conference/" target="_blank" style="display: inline;">AI2ASE Workshop</a>, proposes stability-aware, cross-platform feature selection for matched TCGA microarray/RNA-seq data—targeting reproducible biomarkers rather than fragile, platform-specific signals.
+		  Broadly, I care about <b>Causal and Fair Machine Learning</b>: treatment-effect modeling, subgroup analysis, and evaluation protocols that reveal when a model’s apparent gains don’t translate to real-world impact. 
+		  My goal is to design simple, principled pipelines—data curation, robust learning, and transparent metrics—that can be deployed without exotic infrastructure.
+		  <br><br>
+		
+		  Outside of academics, I enjoy learning about advances at the intersection of biology and computing.
+		</p>
 
-          My undergraduate thesis, supervised by <a href="https://cse.buet.ac.bd/faculty/faculty_detail/rezwana" target="_blank" style="display: inline;">Dr. Rezwana Reaz</a>, focused on task scheduling in cloud computing. We developed a family of hybrid optimization algorithms that systematically integrate the <b>Fireworks Algorithm (FWA)</b> and the <b>Whale Optimization Algorithm (WOA)</b> for multi-objective independent task scheduling. Our proposed hybrids demonstrated superior performance in minimizing makespan and optimizing resource utilization compared to advanced standalone and hybrid algorithms.
-          <br><br>
-
-          Outside of academics, I enjoy coding, writing, and learning about advances at the intersection of biology and computing. I also maintain an interest in system modeling and algorithm design.
-        </p>
       </section>
 <!--         
         <section class="about-text">
