--- a/index.html
+++ b/index.html
@@ -193,8 +193,8 @@
 		
 		  Recently, I led a cross-dataset study on mental health across diverse cohorts, published in 
 		  <i>Humanities & Social Sciences Communications</i> (Nature Portfolio, 2025). On the bioinformatics side, our 
-		  <b>SCOPES</b> work, accepted to the AAAI-26 
-		  <a href="https://aaai.org/aaai-conference/" target="_blank" style="display: inline;">AI2ASE Workshop</a>, proposes stability-aware, cross-platform feature selection for matched TCGA microarray/RNA-seq data—targeting reproducible biomarkers rather than fragile, platform-specific signals.
+		  <b>SCOPES</b> work, accepted to the  
+		  <a href="https://aaai.org/aaai-conference/" target="_blank" style="display: inline;">AAAI-26 AI2ASE Workshop</a>, proposes stability-aware, cross-platform feature selection for matched TCGA microarray/RNA-seq data—targeting reproducible biomarkers rather than fragile, platform-specific signals.
 		  Broadly, I care about <b>Causal and Fair Machine Learning</b>: treatment-effect modeling, subgroup analysis, and evaluation protocols that reveal when a model’s apparent gains don’t translate to real-world impact. 
 		  My goal is to design simple, principled pipelines—data curation, robust learning, and transparent metrics—that can be deployed without exotic infrastructure.
 		  <br><br>
