--- a/index.html
+++ b/index.html
@@ -54,38 +54,48 @@
         </div>
         <div class="separator_sidebar"></div>
 
-        <ul class="social-list">
+		<ul class="social-list">
+		
+		  <li class="social-item">
+		    <a href="https://github.com/Nayem9274" class="social-link">
+		      <ion-icon name="logo-github"></ion-icon>
+		    </a>
+		  </li>
+		
+		  <li class="social-item">
+		    <a href="https://www.linkedin.com/in/" class="social-link">
+		      <ion-icon name="logo-linkedin"></ion-icon>
+		    </a>
+		  </li>
+		
+		  <li class="social-item">
+		    <a href="https://orcid.org/0009-0001-8702-7315"
+		      class="social-link"
+		      target="_blank" rel="noopener"
+		      aria-label="ORCID">
+		      <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/06/ORCID_iD.svg/768px-ORCID_iD.svg.png?20190308043226"
+		          alt="ORCID" style="height:1.25em; vertical-align:middle;">
+		    </a>
+		  </li>
+		
+		  <li class="social-item">
+		    <a href="mailto:abdullahnayem9274" class="social-link">
+		      <ion-icon name="mail-outline"></ion-icon>
+		    </a>
+		  </li>
+		
+		  <li class="social-item">
+		    <a href="https://scholar.google.com/citations?view_op=list_works&hl=en&user=4qNfSdUAAAAJ"
+		      class="social-link"
+		      target="_blank" rel="noopener"
+		      aria-label="Google Scholar">
+		      <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/4a/Google_Scholar_logo.svg/512px-Google_Scholar_logo.svg.png"
+		          alt="Google Scholar" style="height:1.25em; vertical-align:middle;">
+		    </a>
+		  </li>
+		
+		</ul>
 
-          <li class="social-item">
-            <a href="https://github.com/Nayem9274" class="social-link">
-              <ion-icon name="logo-github"></ion-icon>
-            </a>
-          </li>
-
-          <li class="social-item">
-            <a href="https://www.linkedin.com/in/" class="social-link">
-              <ion-icon name="logo-linkedin"></ion-icon>
-            </a>
-          </li>
-
-          
-          <li class="social-item">
-            <a href="https://orcid.org/0009-0001-8702-7315"
-              class="social-link"
-              target="_blank" rel="noopener"
-              aria-label="ORCID">
-              <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/06/ORCID_iD.svg/768px-ORCID_iD.svg.png?20190308043226"
-                  alt="ORCID" style="height:1.25em; vertical-align:middle;">
-            </a>
-          </li>
-
-          <li class="social-item">
-            <a href="mailto:abdullahnayem9274@gmail.com" class="contact-link">
-              <ion-icon name="mail-outline"></ion-icon>
-            </a>
-          </li>
-
-        </ul>
 
         <button class="info_more-btn" data-sidebar-btn>
           <span>Show Updates</span>
