--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 		      class="social-link"
 		      target="_blank" rel="noopener"
 		      aria-label="Google Scholar">
-		      <img src="https://commons.wikimedia.org/wiki/File:Google_Scholar_blue_logo.png"
+		      <img src="./assets/images/avatar_scholar_256.png"
 		          alt="Google Scholar" style="height:1.25em; vertical-align:middle;">
 		    </a>
 		  </li>
